--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,8 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
+include:
+  - board: mikoto_520
+    shield: corne_left
+  - board: mikoto_520
+    shield: corne_right
